--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "devDependencies": {
     "vite": "^5.0.0"
   },
-  "homepage": "https://GITHUB_USERNAME.github.io/warehouse-app-prototype/"
+  "homepage": "https://lw-warehouse-app-prototype.github.io/warehouse-app-prototype/"
 } 
