--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,16 +28,13 @@ jobs:
       - name: Install Dependencies 🔧
         run: npm ci
 
-      - name: Build 📦
-        run: npm run build
-
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: .
 
       - name: Deploy to GitHub Pages 🚀
         if: github.ref == 'refs/heads/main'
