--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "warehouse-app-prototype",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "serve": "serve .",
+    "deploy": "gh-pages -d ."
   },
   "dependencies": {
     "@material/web": "^1.3.0",
     "lit": "^3.1.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "gh-pages": "^6.3.0",
+    "serve": "^14.2.4"
   },
   "homepage": "https://lw-warehouse-app-prototype.github.io/warehouse-app-prototype/"
-} 
+}
